--- a/src/myproject_frontend/src/index.html
+++ b/src/myproject_frontend/src/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>myproject</title>
-    <base href="/" />
-    <link rel="icon" href="favicon.ico" />
-    <link type="text/css" rel="stylesheet" href="main.css" />
-  </head>
-  <body>
-    <main>
-      <img src="logo2.svg" alt="DFINITY logo" />
-      <br />
-      <br />
-      <form action="#">
-        <label for="name">Enter your name: &nbsp;</label>
-        <input id="name" alt="Name" type="text" />
-        <button type="submit">Click Me!</button>
-      </form>
-      <section id="greeting"></section>
-    </main>
-  </body>
+<html>
+<head>
+    <title>Voting Application</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+</head>
+<body>
+    <h1>Vote for Your Favorite Option</h1>
+
+    <div id="options">
+        <!-- Voting options will be dynamically inserted here using JavaScript -->
+    </div>
+
+    <button id="voteButton">Vote</button>
+
+    <script src="index.js"></script>
+</body>
 </html>
