created a json file

--- a/src/myproject_frontend/src/index.html
+++ b/src/myproject_frontend/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Voting Application</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <h1>Vote for Your Favorite Option</h1>
@@ -11,8 +11,8 @@
         <!-- Voting options will be dynamically inserted here using JavaScript -->
     </div>
 
-    <button id="voteButton">Vote</button>
+    <button id="voteButton" disabled>Vote</button>
 
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
