name changes and css push

--- a/src/myproject_frontend/src/index.html
+++ b/src/myproject_frontend/src/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Vote for Your Favorite Option</h1>
+    <h1>Vote for Your School Captain</h1>
 
     <div id="options">
         <!-- Voting options will be dynamically inserted here using JavaScript -->
