--- a/src/myproject_frontend/src/index.html
+++ b/src/myproject_frontend/src/index.html
@@ -5,13 +5,21 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Vote for Your School Captain</h1>
+    <h1>Vote for Your Favorite Option</h1>
 
     <div id="options">
         <!-- Voting options will be dynamically inserted here using JavaScript -->
     </div>
 
     <button id="voteButton" disabled>Vote</button>
+
+    <div id="comments">
+        <!-- User comments and discussions will be displayed here -->
+    </div>
+
+    <div id="leaderboard">
+        <!-- Leaderboard displaying top voted options -->
+    </div>
 
     <script src="script.js"></script>
 </body>
