--- a/src/myproject_frontend/src/index.html
+++ b/src/myproject_frontend/src/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Voting Application</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <h1>Vote for Your Favorite Option</h1>
